--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
             <div class="cntctDiv" style="padding-top:10px;"><a href="https://www.instagram.com/samiksha_1405/"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384031.png" style="width:100px;"><br>Instagram.com/samiksha_1405</a></div>
             <br><br><Br>
             <div class="cntctDiv"><img src="https://cdn-icons-png.flaticon.com/256/25/25694.png" style="width:100px;">
-            <br>Kittens Centre, New Delhi
+            <br>Cattpaws Centre, New Delhi
             </div>
             </div>
            </div>
