--- a/termsConditions.html
+++ b/termsConditions.html
@@ -22,7 +22,7 @@
     <div style="color:white; text-align:justify; padding:20px;">
         <h1 style="color:aqua;">Terms and Conditions</h1>
     
-        <p>These terms and conditions outline the rules and regulations for the use of Kittens' Website, located at <a href="index.html" style="color:crimson">Kittens.com</a>.</p>
+        <p>These terms and conditions outline the rules and regulations for the use of cattpaws' Website, located at <a href="index.html" style="color:crimson">cattpaws.com</a>.</p>
 
         <p>By accessing this website, we assume you accept these terms and conditions. Do not continue to use Kittens' website if you do not agree to take all of the terms and conditions stated on this page.</p>
 
@@ -32,14 +32,14 @@
 
         <h3>License</h3>
 
-        <p>Unless otherwise stated, Kittens and/or its licensors own the intellectual property rights for all material on Kittens. All intellectual property rights are reserved. You may access this from Kittens for your own personal use subjected to restrictions set in these terms and conditions.</p>
+        <p>Unless otherwise stated, cattpaws and/or its licensors own the intellectual property rights for all material on cattpaws.com. All intellectual property rights are reserved. You may access this from cattpaws.com for your own personal use subjected to restrictions set in these terms and conditions.</p>
 
         <h4>You must not:</h4>
         <ul>
-            <li>Republish material from Kittens.com. </li>
-           <li> Sell, rent or sub-license material from Kittens.com.</li>
-            <li>Reproduce, duplicate or copy material from Kittens.com.</li>
-            <li>Redistribute content from Kittens.com.</li>
+            <li>Republish material from cattpaws.com. </li>
+           <li> Sell, rent or sub-license material from cattpaws.com.</li>
+            <li>Reproduce, duplicate or copy material from cattpaws.com.</li>
+            <li>Redistribute content from cattpaws.com.</li>
             <li>Reservation of Rights</li>
         </ul>
 
