--- a/returnPolicy.html
+++ b/returnPolicy.html
@@ -21,7 +21,7 @@
      <div style=" padding-top:60px;height:1000px; text-align:justify;background-color: black; color:white;">
         <div style="padding:20px;">
             <h1 style="color:aqua;">Return Policy</h1>
-            <p>At Kittens, we strive to match each of our beloved cats with the perfect forever home. We understand that sometimes circumstances change, and we want to ensure that both you and your new feline companion are happy. If for any reason you find that your new cat is not the right fit for your home, we're here to assist you.</p>
+            <p>At cattpaws, we strive to match each of our beloved cats with the perfect forever home. We understand that sometimes circumstances change, and we want to ensure that both you and your new feline companion are happy. If for any reason you find that your new cat is not the right fit for your home, we're here to assist you.</p>
 
             <h3>Returns</h3>
 
@@ -53,7 +53,7 @@
 
             <h3>Contact Us</h3>
 
-            <p>If you have any questions or concerns about our return policy or need assistance with a return, please don't hesitate to contact our customer service team at <a href="contact.html" style="color:crimson;">Contact Us</a>. We are committed to ensuring that you have a positive experience with your new cat from Kittens.</p>
+            <p>If you have any questions or concerns about our return policy or need assistance with a return, please don't hesitate to contact our customer service team at <a href="contact.html" style="color:crimson;">Contact Us</a>. We are committed to ensuring that you have a positive experience with your new cat from cattpaws.</p>
         </div>
     </div>
     <div class="div21">
