--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -22,7 +22,7 @@
         <div style="padding:20px;">
         <h1 style="color:aqua;">Privacy Policy</h1>
 
-        <p>Kittens operates the Kitens.com website, which provides information about our products and services, including the sale of cats.</p>
+        <p>cattpaws operates the cattpaws.com website, which provides information about our products and services, including the sale of cats.</p>
         <p>This page is used to inform website visitors regarding our policies with the collection, use, and disclosure of personal information if anyone decides to use our service.</p>
 
         <p>If you choose to use our service, then you agree to the collection and use of information in relation to this policy. The personal information that we collect is used for providing and improving our service. We will not use or share your information with anyone except as described in this Privacy Policy.</p>
@@ -71,7 +71,7 @@
 
         <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at <a href="contact.html" style="color:crimson;">Contact Us</a>.</p>
 
-        <p>At Kittens.com, the privacy of your personal information, identity, or account is very important to us. This privacy policy explains that at Kittens, we are committed to protecting your privacy. We collect certain information from you when you use our website.</p>
+        <p>At cattpaws.com, the privacy of your personal information, identity, or account is very important to us. This privacy policy explains that at cattpaws, we are committed to protecting your privacy. We collect certain information from you when you use our website.</p>
     </div>
     </div>
     <div class="div21">
