--- a/firstApproach.html
+++ b/firstApproach.html
@@ -22,7 +22,7 @@
         <div style="padding:20px;">
         <br><BR><bR><br><BR><BR>
         <div style="border-radius:25px; border:2px solid aqua; padding:30px; text-align:justify;"><b style="font-size:50px; color:rgb(80, 185, 241);"><i>Our Pets First Approach</i></b><br>
-        <p style="font-size:25px;"><i>At Kittens, we are committed to the well-being and happiness of every pet we connect with loving families. We are not mere intermediaries; instead, we are a platform dedicated to facilitating secure, trustworthy, and compassionate pet adoptions.</i></p>
+        <p style="font-size:25px;"><i>At cattpaws, we are committed to the well-being and happiness of every pet we connect with loving families. We are not mere intermediaries; instead, we are a platform dedicated to facilitating secure, trustworthy, and compassionate pet adoptions.</i></p>
         </div>
         <br><HR>
         <br><br><br>
