--- a/customerReviews.html
+++ b/customerReviews.html
@@ -18,27 +18,31 @@
         </div>
     </header>
     <main>
-    <div style=" padding-top:150px;height:2260px; text-align:justify;background-color: rgb(196, 2, 189); color:white;">
+    <div style=" padding-top:150px;height:4500px; text-align:justify;background-color: rgb(196, 2, 189); color:white;">
         <div style="padding:20px;">
         <img src="https://www.felinefeatures.co.uk/images/skin/reviews.jpg" style="width:100%; border-radius:25px;">
         <br><br><br><BR>
+            <img src="customer1.jpg" style="width:700px; margin-left:280px;">
         <div style="border-radius:25px; border:2px solid rgb(83, 226, 255); width:90%; margin-left:3%; height:270px; background-color:rgb(247, 247, 247);">
-            <pre style="font-size:30px; text-align:center;padding:5px; color:rgb(16, 16, 16);">I love my cat. He is my bestfriend and the bond I share with him is <br>special. I remember before getting him, I was very nervous but <br>thankfully I contacted Kittens. They were very helpful and I am glad I <br>took the leap.
-            <br>- PEEYA BHATIA, PET NAME - BUDDY</pre>
+            <pre style="font-size:30px; text-align:center;padding:5px; color:rgb(16, 16, 16);">I love my cat. He is my bestfriend and the bond I share with him is <br>special. I remember before getting him, I was very nervous but <br>thankfully I contacted cattpaws. They were very helpful and I am glad I <br>took the leap.
+            <br>- DHRUV, PET NAME - BUDDY</pre>
         </div>
         <br><br><br>
+        <img src="customer2.jpg" style="width:700px; margin-left:280px;">
         <div style="border-radius:25px; border:2px solid rgb(83, 226, 255); width:90%; margin-left:3%; height:340px; background-color:rgb(255, 255, 255);">
             <pre style="font-size:30px; text-align:center;padding:5px; color:rgb(0, 0, 0);">He turned our life around and gave us purpose to care and love again. <br>My whole life revolves around taking care of his needs. He is my <br>forced exercise and the look of love and belonging he gives me is the<br> best feeling on this planet. Besides he is husky and talks back all the <br>time - which is so much fun (could we ever say so when our teenagers <br>behaved like this).
-        <br>-SHIREEN SINGH, PET NAME - VODKA</pre></div>
+        <br>- SHIREEN SINGH, PET NAME - VODKA</pre></div>
         <br><br><br>
+        <img src="customer3.jpg" style="width:700px; margin-left:280px;">
         <div style="border-radius:25px; border:2px solid rgb(83, 226, 255); width:90%; margin-left:3%; height:300px; background-color:rgb(255, 255, 255);">
         <pre style="font-size:30px; text-align:center;padding:5px; color:rgb(1, 1, 1);"> The best of my childhood memories are with Musty. He is my buddy, my <br>brother, my friend, and my pride. When I play with him,I don't miss <br>my friends. When I watch TV with him, I don't miss my parents. When<br> I take him out to show him to my friends, that is my proudest moment. 
-        <br>-HUNNER SINGH PROUD OWNER OF MUSTY SINGH</pre>
+        <br>- HUNNER SINGH PROUD OWNER OF MUSTY SINGH</pre>
         </div>
         <br><br><br>
+        <img src="customer4.jpg" style="width:700px; margin-left:280px;">
         <div style="border-radius:25px; border:2px solid rgb(83, 226, 255); width:90%; margin-left:3%; height:270px; background-color:rgb(255, 255, 255);">
-        <pre style="font-size:30px; text-align:center;padding:5px; color:rgb(0, 0, 0);"> My life revolves around my pets. I love them dearly. Milo and Kaya are <br>angelic. My life is incomplete without them. It may sound strange to <br>some but they are family to me and I would do anything for them. Thank<br> you Kittens for helping me find my family. 
-        <br>-DHRUV, PET NAMES - MILO AND KAYA</pre>
+        <pre style="font-size:30px; text-align:center;padding:5px; color:rgb(0, 0, 0);"> My life revolves around my pets. I love them dearly. Milo and Kaya are <br>angelic. My life is incomplete without them. It may sound strange to <br>some but they are family to me and I would do anything for them. Thank<br> you cattpaws for helping me find my family. 
+        <br>- PEEYA BHATIA, PET NAMES - MILO AND KAYA</pre>
         </div>
         <br><br><BR>
     </div>
