--- a/buyKittens.html
+++ b/buyKittens.html
@@ -32,7 +32,7 @@
     </div>
   <main>
         <div style="background-color:#ffe1f5; width:100%;  height:3550px;">
-        <div id="div">
+        <div id="div" style="background-image: url('cattpaws.jpg'); background-size:34% 100%;">
             <h1><i><B>Pets For Sale - Trustworthy Kitten Sellers</B></i></h1>
             <p style="font-size:25px; text-align: left; padding-left: 2%; ">Kittens.com connects pawsome people like you with happy, healthy pets for sale from our respected, prominent breeder relationships we’ve established over the last 15 years. Join our community of paw lovers across India.
             </p>
