--- a/funFacts.html
+++ b/funFacts.html
@@ -9,9 +9,11 @@
 <body>
     <header class="header1">
         <div>
-            <div class="div1"><B>CATS</B></div>
-                <li class="button1"><a href="buykittens.html"  style="color:cyan">Buy Kittens | </li>                <li class="button1"><a href="gallery.html" style="color:cyan">Gallery |</a></li>
+            <div class="di1"><img src="cattpaws.jpg" style="border-radius:30px;width:50px; padding-top:2px;"></div>
+                <li class="button1"><a href="buykittens.html"  style="color:cyan">Buy Kittens | </li>                
+                <li class="button1"><a href="gallery.html" style="color:cyan">Gallery |</a></li>
                 <li class="button1"><a href="/index.html" style="color:cyan">Home |</a></li>
+                <Div class="button1" style="font-size: 40px; width:10px; height:10px;margin-right:30%;padding-bottom:50px; font-family: Serif, Georgia; color:#CC99FF;"><B>cattpaws</B></Div></div>
         </div>
     </header>
     <br><br><BR>
