--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 <body>
     <header class="header">
         <div>
-            <div class="di1"><B>CATS</B></div>
-                <li class="button1"><a href="buykittens.html"  style="color:rgba(6, 113, 17, 0.927)">Buy Kittens | </li>                <li class="button1"><a href="gallery.html" style="color:rgba(6, 113, 17, 0.927)">Gallery |</a></li>
+            <div class="di1"><img src="cattpaws.jpg" style="border-radius:30px;width:50px; padding-top:2px;"></div>
+                <li class="button1"><a href="buykittens.html"  style="color:rgba(6, 113, 17, 0.927)">Buy Kittens | </li>   
+                <li class="button1"><a href="gallery.html" style="color:rgba(6, 113, 17, 0.927)">Gallery |</a></li>
                 <li class="button1"><a href="funFacts.html" style="color:rgba(6, 113, 17, 0.927)">Fun Facts |</a></li>
+                <Div class="button1" style="font-size: 40px; width:10px; height:10px;margin-right:30%;padding-bottom:50px; font-family: Serif, Georgia; color:#fc0808e8;"><B>cattpaws</B></Div></div>
+
             </div>
     </header> 
     <br><br><BR><BR><br><BR><BR>
