--- a/funFacts.html
+++ b/funFacts.html
@@ -23,6 +23,8 @@
         <img class="mySlides" src="https://wallpaperswide.com/download/black_cat-wallpaper-1920x1200.jpg">
     </div>
     <main>
+        <br>
+        <div style="width:100%; height:50px; font-size:20px; background-color: rgb(127, 242, 255); color:blueviolet; text-align:center;"> <b><i>To know more about Us<a href="#down"><button class="btn0">CLICK ME!</i></b></button></a></div> 
         <div class="h1-2"><h1>Fun Facts About Cats</h1></div>
         <hr>
             <div class="section2"><div class="text2"><div class="img"><img src="https://lh6.googleusercontent.com/proxy/_T3QHLbsanyxmqloPWXbUsHqSzWjfBfT7-Q6jYghgxYtSHRkYJz2GVowgfOM57V3sOJfVDAk8EXUFxvM93_lm1nFWFhxv2bweUnss7_ITvcXDfRIQmBJTsmqTApPyGo" width="500px"></div>
