--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <img class="mySlides" src="https://w0.peakpx.com/wallpaper/109/138/HD-wallpaper-beautiful-white-cat-cat-kitten-sweet-animal.jpg" height="900px">
     </div>
     <main>    
+        <br>
+        <div style="width:100%; height:50px; font-size:20px; background-color: rgb(127, 242, 255); color:blueviolet; text-align:center;"> <b><i>To know more about Us<a href="#down"><button class="btn0">CLICK ME!</i></b></button></a></div>
     <div class="h1"><h1>Things Every Cat Owner Should Know</h1></div>
     <hr>
     <div class="section1"><div class="text">
