--- a/funFacts.html
+++ b/funFacts.html
@@ -109,7 +109,7 @@
             <h2>22. Cats are musical creatures!</h2>
             <p class="dv2">Much like birds, cats make many different noises. Cats can make up to 100 sounds, whereas dogs only make 10! Now, that’s some musical talent. </p>
         </div></div>
-        <div class="div21">
+        <div class="div21" id="down">
             <p><b><i>Our Policies &emsp; &emsp; &emsp; &emsp; Our Services</i></b></p>
             <div class="div31">
             <a href="termsConditions.html" style="font-size:25px; color:white;">Terms and Conditions</a>
