--- a/gallery.html
+++ b/gallery.html
@@ -9,8 +9,9 @@
 <body>
     <header class="header1">
         <div>
-            <div class="div1"><B>GALLERY</B></div>
-                <li class="button1"><a href="buykittens.html"  style="color:rgba(255, 0, 0)">Buy Kittens | </li>                <li class="button2"><a href="funFacts.html" style="color:rgb(255, 0, 0)">Fun Facts |</a></li>
+            <div class="div1"><B>Gallery</B></div>
+                <li class="button1"><a href="buykittens.html"  style="color:rgba(255, 0, 0)">Buy Kittens | </li>                
+                <li class="button2"><a href="funFacts.html" style="color:rgb(255, 0, 0)">Fun Facts |</a></li>
                 <li class="button2"><a href="index.html" style="color:rgb(255, 0, 0)">Home |</a></li>
         </div>
     </header>
