--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     </p>
     <br><br><br><Br><Br><BR><BR><BR>
     </div></div>
-    <div class="div21">
+    <div class="div21" id="down">
         <p><b><i>Our Policies &emsp; &emsp; &emsp; &emsp; Our Services</i></b></p>
         <div class="div31">
         <a href="termsConditions.html" style="font-size:25px; color:white;">Terms and Conditions</a>
